# benchmark

./: .gitignore  LICENSE  README.md  example_usage.py  pyproject.toml
benchmark/: __init__.py  __main__.py
benchmark/base/: __init__.py  benchmark_base.py
benchmark/squad/: __init__.py  squad_benchmark.py
benchmark/tab/: __init__.py  tab_benchmark.py
tests/: __init__.py  test_benchmarks.py
