[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmark"
version = "0.1.0"
description = "Benchmarking for LLMs"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Yamac Eren Ay"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/yamaceay/benchmark"
Repository = "https://github.com/yamaceay/benchmark"

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmark*"]
